crates/fixtures/tests/snapshots/hostile__image_unreadable.snap
---
source: crates/fixtures/tests/hostile.rs
expression: snapshot.to_json()
---
{
  "revision": [
    [
      1,
      23
    ]
  ],
  "adapter": {
    "name": "harfrust",
    "version": "0.13.3",
    "platform_independent": true
  },
  "composer": "greedy",
  "medium": {
    "width": 430080,
    "height": 307200
  },
  "settings": {
    "max_pages": 1000,
    "paragraph_spacing": 8192,
    "annotation_spacing": 4096
  },
  "template": {
    "name": "default",
    "source": "builtin"
  },
  "pages": [
    {
      "width": 430080,
      "height": 307200
    }
  ],
  "frames": [
    {
      "name": "main",
      "role": {
        "flow": "main"
      },
      "page": 0,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 36864,
        "ty": 36864
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 225280,
        "height": 233472
      }
    },
    {
      "name": "margin",
      "role": "margin",
      "page": 0,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 280576,
        "ty": 36864
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 112640,
        "height": 233472
      }
    }
  ],
  "blocks": [
    {
      "node": "6@1",
      "kind": "image",
      "style": {
        "family": "Source Serif Pro",
        "size": 11264,
        "line_height": 13517,
        "explain": {
          "family": "default",
          "line-height": "default",
          "size": "style body"
        }
      },
      "lines": [
        {
          "frame": 0,
          "text": {
            "start": 0,
            "end": 12
          },
          "preview": "Future image",
          "rect": {
            "origin": {
              "x": 0,
              "y": 0
            },
            "width": 98304,
            "height": 73728
          },
          "baseline": 0,
          "width": 98304,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": []
        }
      ],
      "image": {
        "asset": "",
        "alt": "Future image",
        "frame": 0,
        "rect": {
          "origin": {
            "x": 0,
            "y": 0
          },
          "width": 98304,
          "height": 73728
        },
        "placeholder": true
      }
    }
  ],
  "relations": [],
  "diagnostics": [
    {
      "severity": "warning",
      "code": "layout.image-record",
      "subject": {
        "kind": "node",
        "id": "6@1"
      },
      "message": "unreadable image record retained; using a placeholder",
      "bytes": null
    }
  ]
}
