crates/fixtures/tests/snapshots/hostile__infeasible_solver_domain.snap
---
source: crates/fixtures/tests/hostile.rs
expression: snapshot.to_json()
---
{
  "revision": [
    [
      1,
      49
    ]
  ],
  "adapter": {
    "name": "harfrust",
    "version": "0.13.3",
    "platform_independent": true
  },
  "composer": "greedy",
  "medium": {
    "width": 430080,
    "height": 307200
  },
  "settings": {
    "max_pages": 1000,
    "paragraph_spacing": 8192,
    "annotation_spacing": 4096
  },
  "template": {
    "name": "regions",
    "source": "document"
  },
  "pages": [
    {
      "width": 102400,
      "height": 61440
    }
  ],
  "frames": [
    {
      "name": "body",
      "role": {
        "flow": "main"
      },
      "page": 0,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 0,
        "ty": 0
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 102400,
        "height": 61440
      }
    },
    {
      "name": "notes",
      "role": "notes",
      "page": 0,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 0,
        "ty": 0
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 102400,
        "height": 61440
      }
    }
  ],
  "blocks": [
    {
      "node": "29@1",
      "kind": "paragraph",
      "style": {
        "family": "Source Serif Pro",
        "size": 10240,
        "line_height": 12288,
        "explain": {
          "family": "default",
          "line-height": "style body",
          "size": "style body"
        }
      },
      "lines": [
        {
          "frame": 0,
          "text": {
            "start": 0,
            "end": 4
          },
          "preview": "cell",
          "rect": {
            "origin": {
              "x": 0,
              "y": 0
            },
            "width": 51200,
            "height": 12288
          },
          "baseline": 9733,
          "width": 16221,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 0,
                "end": 4
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 10240,
              "level": 0,
              "x": 0,
              "width": 16221
            }
          ]
        }
      ]
    },
    {
      "node": "42@1",
      "kind": "paragraph",
      "style": {
        "family": "Source Serif Pro",
        "size": 10240,
        "line_height": 12288,
        "explain": {
          "family": "default",
          "line-height": "style body",
          "size": "style body"
        }
      },
      "lines": [
        {
          "frame": 0,
          "text": {
            "start": 0,
            "end": 4
          },
          "preview": "cell",
          "rect": {
            "origin": {
              "x": 51200,
              "y": 0
            },
            "width": 51200,
            "height": 12288
          },
          "baseline": 9733,
          "width": 16221,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 0,
                "end": 4
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 10240,
              "level": 0,
              "x": 51200,
              "width": 16221
            }
          ]
        }
      ]
    }
  ],
  "relations": [],
  "diagnostics": [
    {
      "severity": "warning",
      "code": "layout.solver-infeasible",
      "subject": {
        "kind": "node",
        "id": "14@1"
      },
      "message": "infeasible domain; bounds relaxed to equal columns",
      "bytes": null
    }
  ]
}
