crates/fixtures/tests/snapshots/hostile__marks_cycle_tabs.snap
---
source: crates/fixtures/tests/hostile.rs
expression: snapshot.to_json()
---
{
  "revision": [
    [
      1,
      64
    ],
    [
      2,
      0
    ]
  ],
  "adapter": {
    "name": "harfrust",
    "version": "0.13.3",
    "platform_independent": true
  },
  "composer": "greedy",
  "medium": {
    "width": 430080,
    "height": 307200
  },
  "settings": {
    "max_pages": 1000,
    "paragraph_spacing": 8192,
    "annotation_spacing": 4096
  },
  "template": {
    "name": "default",
    "source": "builtin"
  },
  "pages": [
    {
      "width": 430080,
      "height": 307200
    }
  ],
  "frames": [
    {
      "name": "main",
      "role": {
        "flow": "main"
      },
      "page": 0,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 36864,
        "ty": 36864
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 225280,
        "height": 233472
      }
    },
    {
      "name": "margin",
      "role": "margin",
      "page": 0,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 280576,
        "ty": 36864
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 112640,
        "height": 233472
      }
    }
  ],
  "blocks": [
    {
      "node": "6@1",
      "kind": "paragraph",
      "style": {
        "tabs": {
          "interval": 1,
          "stops": [
            {
              "position": 2147483647,
              "alignment": "end",
              "leader": null
            }
          ]
        },
        "family": "Source Serif Pro",
        "size": 11264,
        "line_height": 13517,
        "explain": {
          "family": "default",
          "line-height": "default",
          "size": "style body",
          "tabs": "direct"
        }
      },
      "lines": [
        {
          "frame": 0,
          "text": {
            "start": 0,
            "end": 3
          },
          "preview": "a",
          "rect": {
            "origin": {
              "x": 0,
              "y": 0
            },
            "width": 225280,
            "height": 13517
          },
          "baseline": 10707,
          "width": 225280,
          "explanation": {
            "reason": "forced",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 0,
                "end": 3
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 0,
              "x": 0,
              "width": 225280
            }
          ]
        },
        {
          "frame": 0,
          "text": {
            "start": 3,
            "end": 4
          },
          "preview": "",
          "rect": {
            "origin": {
              "x": 0,
              "y": 13517
            },
            "width": 225280,
            "height": 13517
          },
          "baseline": 24224,
          "width": 225280,
          "explanation": {
            "reason": "opportunity",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 3,
                "end": 4
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 0,
              "x": 0,
              "width": 225280
            }
          ]
        },
        {
          "frame": 0,
          "text": {
            "start": 4,
            "end": 6
          },
          "preview": "b",
          "rect": {
            "origin": {
              "x": 0,
              "y": 27034
            },
            "width": 6499,
            "height": 13517
          },
          "baseline": 37741,
          "width": 6499,
          "explanation": {
            "reason": "forced",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 4,
                "end": 6
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 0,
              "x": 0,
              "width": 6499
            }
          ]
        },
        {
          "frame": 0,
          "text": {
            "start": 6,
            "end": 8
          },
          "preview": "c",
          "rect": {
            "origin": {
              "x": 0,
              "y": 40551
            },
            "width": 5497,
            "height": 13517
          },
          "baseline": 51258,
          "width": 5497,
          "explanation": {
            "reason": "forced",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 6,
                "end": 8
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 0,
              "x": 0,
              "width": 5497
            }
          ]
        },
        {
          "frame": 0,
          "text": {
            "start": 8,
            "end": 8
          },
          "preview": "",
          "rect": {
            "origin": {
              "x": 0,
              "y": 54068
            },
            "width": 0,
            "height": 13517
          },
          "baseline": 64775,
          "width": 0,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": []
        }
      ]
    },
    {
      "node": "16@1",
      "kind": "paragraph",
      "style": {
        "family": "Source Serif Pro",
        "size": 11264,
        "line_height": 13517,
        "explain": {
          "family": "default",
          "line-height": "default",
          "size": "style body"
        }
      },
      "lines": [
        {
          "frame": 0,
          "text": {
            "start": 0,
            "end": 6
          },
          "preview": "target",
          "rect": {
            "origin": {
              "x": 0,
              "y": 75777
            },
            "width": 225280,
            "height": 13517
          },
          "baseline": 86484,
          "width": 29118,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 0,
                "end": 6
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 0,
              "x": 0,
              "width": 29118
            }
          ]
        }
      ]
    }
  ],
  "relations": [
    {
      "id": "40@1",
      "schema": "reprise.alignment",
      "owner": "6@1",
      "status": "valid",
      "applied": false,
      "targets": [
        {
          "role": "line",
          "status": "valid",
          "resolved": {
            "range": {
              "node": "6@1",
              "bytes": {
                "start": 0,
                "end": 0
              }
            }
          }
        },
        {
          "role": "to",
          "status": "valid",
          "resolved": {
            "range": {
              "node": "16@1",
              "bytes": {
                "start": 0,
                "end": 0
              }
            }
          }
        }
      ]
    },
    {
      "id": "58@1",
      "schema": "reprise.alignment",
      "owner": "16@1",
      "status": "valid",
      "applied": false,
      "targets": [
        {
          "role": "line",
          "status": "valid",
          "resolved": {
            "range": {
              "node": "16@1",
              "bytes": {
                "start": 0,
                "end": 0
              }
            }
          }
        },
        {
          "role": "to",
          "status": "valid",
          "resolved": {
            "range": {
              "node": "6@1",
              "bytes": {
                "start": 0,
                "end": 0
              }
            }
          }
        }
      ]
    }
  ],
  "diagnostics": [
    {
      "severity": "warning",
      "code": "compose.tab-unreachable",
      "subject": {
        "kind": "node",
        "id": "6@1"
      },
      "message": "tab cannot reach its stop in this interval; gap clamped without reversing text",
      "bytes": {
        "start": 1,
        "end": 2
      }
    },
    {
      "severity": "warning",
      "code": "compose.tab-unreachable",
      "subject": {
        "kind": "node",
        "id": "6@1"
      },
      "message": "tab cannot reach its stop in this interval; gap clamped without reversing text",
      "bytes": {
        "start": 3,
        "end": 4
      }
    },
    {
      "severity": "warning",
      "code": "relation.alignment-cycle",
      "subject": {
        "kind": "relation",
        "id": "40@1"
      },
      "message": "cyclic, dependent or noninvertible pin retains pre-pin geometry (256-round domain)",
      "bytes": null
    },
    {
      "severity": "warning",
      "code": "relation.alignment-cycle",
      "subject": {
        "kind": "relation",
        "id": "58@1"
      },
      "message": "cyclic, dependent or noninvertible pin retains pre-pin geometry (256-round domain)",
      "bytes": null
    }
  ]
}
